# tyt.app

./: .env  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  ACADEMY_COMPLETE_UPDATE.md  ACTION_PLAN.md  ADMIN_DASHBOARD_FIX_COMPLETE.md  ADMIN_PANEL_GUIDE.md  ALCHEMY_KEY_ROTATION.md  AOI_COMPACT_IMPLEMENTATION.md  AOI_LANDING_INTEGRATION_COMPLETE.md  API_KEYS_SECURITY.md  APP_DEPLOYMENT_QUICK_START.md  APP_SECURITY_COMPLETE_REPORT.md  ARCHITECTURE_DIAGRAM.md  AUDIT_REPORT.md  AUDIT_REPORT_2025-12-31.md  AUTOMATION_SETUP.md  BITCOIN_COMPLETE_GUIDE.md  BLOCKCHAIN_API_INTEGRATION.md  BLOCKCHAIN_DEPOSITS_GUIDE.md  BLOCKCHAIN_INTEGRATION.md  BUILD_STATUS.md  CHECKLIST.md  CHECK_THEME_WORKS.txt  CLEANUP_COMPLETE.md  CLEANUP_SUMMARY.md  CODE_INTEGRITY_VERIFICATION.md  COMING_SOON_IMPLEMENTATION_COMPLETE.md  COMMUNITY_AND_NAVIGATION_FIX.md  COMPARISON_GITHUB_VS_LOCAL.md  COMPLETE_ANALYSIS_SUMMARY.md  COMPLETE_FEATURES_MAP.md  COMPLETE_SECURITY_IMPLEMENTATION.md  COMPLIANCE_ANALYSIS.md  COMPREHENSIVE_DEPLOYMENT_GUIDE.md  CONTACT_SYSTEM_GUIDE.md  CONTACT_SYSTEM_QUICK_START.md  (+191 more)
contracts/solana/tyt_academy_sbt/programs/tyt_academy_sbt/: Cargo.toml
contracts/solana/tyt_academy_sbt/programs/tyt_academy_sbt/src/: lib.rs
docs/: ADMIN_PANEL_COMPLETE_FIX.md  ADMIN_PANEL_DEBUG.md  AGENT_PROMPTS_V3.md  AOI_ASSETS_INTEGRATION.md  AOI_FOUNDATION_BRIDGE.md  AOI_IMAGES_INTEGRATION.md  AOI_IMAGES_QUICK_START.md  AOI_IMPLEMENTATION_COMPLETE.md  AOI_INTEGRATION_COMPLETE.md  AOI_INTELLIGENT_GUIDE_INTEGRATION_SUMMARY.md  AOI_PHASE2_COMPLETE.md  (+59 more)
src/: App.tsx  (+2 more)
(+725 files in other folders)
