[package]
name = "tyt_academy_sbt"
version = "0.1.0"
description = "TYT Academy Soulbound Token (SBT) program for non-transferable certificates"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tyt_academy_sbt"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"

[dev-dependencies]
solana-program-test = "~1.18.0"
solana-sdk = "~1.18.0"
spl-token = "~4.0.0"
